Updated code base to adhere to google-java-format (#2163)
This PR contains changes after running 'fmt-maven-plugin' on this codebase to apply formatting acccording to to `google-java-format`.

Note: This commit contains **auto-modified** code only.